Add pagination to transactions
